--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row p-1">
             <div class="col-12 col-md-6">
                 <div class="card">
-                    <div class="card-header">REGISTRO DE ALUMNO</div>
+                    <div class="card-header">REGISTRO DE PERSONAS</div>
                     <div class="card-body">
                         <form id="frmAlumno" @reset.prevent="nuevoAlumno" v-on:submit.prevent="guardarAlumno">
                             <div class="row p-1">
